Add simple findUnion

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,9 @@ set(CMAKE_C_FLAGS "-std=c11 -Wall -Wextra")
 set(SOURCE_FILES
     src/gamma.c
     src/gamma.h
-    src/gamma_test.c)
+    src/main_to_tests.c
+#    src/gamma_test.c
+    src/findUnionLib/findUnion.c src/findUnionLib/findUnion.h)
 
 # Wskazujemy plik wykonywalny.
 add_executable(gamma ${SOURCE_FILES})
