--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,8 +23,8 @@ set(CMAKE_C_FLAGS "-std=c11 -Wall -Wextra")
 set(SOURCE_FILES
     src/gamma.c
     src/gamma.h
-    src/main_to_tests.c
-#    src/gamma_test.gic
+#    src/main_to_tests.c
+    src/gamma_test.c
     src/findUnionLib/findUnion.c src/findUnionLib/findUnion.h src/playerLib/player.c src/playerLib/player.h)
 
 # Wskazujemy plik wykonywalny.
