--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,9 @@ set(SOURCE_FILES
     src/gamma.h
 #    src/main_to_tests.c
     src/gamma_test.c
-    src/findUnionLib/findUnion.c src/findUnionLib/findUnion.h src/playerLib/player.c src/playerLib/player.h)
+    src/findUnionLib/findUnion.c src/findUnionLib/findUnion.h
+    src/playerLib/player.c src/playerLib/player.h
+    src/Avl_Tree_lib/avl_tree.c src/Avl_Tree_lib/avl_tree.h)
 
 # Wskazujemy plik wykonywalny.
 add_executable(gamma ${SOURCE_FILES})
