--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,13 +21,12 @@ set(CMAKE_C_FLAGS "-std=c11 -Wall -Wextra")
 
 # Wskazujemy pliki źródłowe.
 set(SOURCE_FILES
-    src/gamma.c
-    src/gamma.h
-
 #    src/main_to_tests.c
-    src/gamma_test.c
-
-#    testy_do_duzego/gbz/gbz5.c
+#    src/gamma_test.c
+#    gbz1.c
+#    testy_do_duzego/jm/test_golden_possible.c
+    ${TEST_FILE}
+#    testy_do_duzego/gbz/gbz4.c
 #    GenerateTests.c
 #    generatedTests/goldenMoveTests/small1.c
 #    generatedTests/freeFieldsTests/chessboard.c
@@ -35,10 +34,23 @@ set(SOURCE_FILES
 
     src/findUnionLib/findUnion.c src/findUnionLib/findUnion.h
     src/playerLib/player.c src/playerLib/player.h
-    src/Avl_Tree_lib/avl_tree.c src/Avl_Tree_lib/avl_tree.h)
+    src/Avl_Tree_lib/avl_tree.c src/Avl_Tree_lib/avl_tree.h
+    src/gammaLib/gammaEngineLib.c src/gammaLib/gammaEngineLib.h
+    src/gamma.c src/gamma.h
+    )
 
 # Wskazujemy plik wykonywalny.
 add_executable(gamma ${SOURCE_FILES})
+
+## --------------------------------------------------
+#enable_testing()
+## add_subdirectory(testy_do_duzego)
+#
+#add_executable(gbz1 gbz1.c ${SOURCE_FILES})
+#add_test(NAME pierwszy COMMAND gbz1)
+## add_test(NAME testy_do_duzego COMMAND *.c)
+## --------------------------------------------------
+
 
 # Dodajemy obsługę Doxygena: sprawdzamy, czy jest zainstalowany i jeśli tak to:
 find_package(Doxygen)
