--- a/Doxyfile.in
+++ b/Doxyfile.in
@@ -92,7 +92,7 @@ ALLOW_UNICODE_NAMES    = NO
 # The default value is: English.
 
 # OUTPUT_LANGUAGE        = Polish
-OUTPUT_LANGUAGE         = ENGLISH
+OUTPUT_LANGUAGE         = English
 
 # If the BRIEF_MEMBER_DESC tag is set to YES, doxygen will include brief member
 # descriptions after the members that are listed in the file and class
